# SNAP

llm/: Dockerfile
llm/experiments/mistral_finetune/: Dockerfile  README.md  finetune_evaluation.py  mistral_finetune.py  pyproject.toml  settings.py
llm/src/audio/: audio2text.py
llm/src/pipeline/: pipeline.py  pipeline4eval.py
llm/src/text/: summarizelangchain.py  text2summ.py
llm/src/utils/text/: domainFlow.py  llmUtils.py  scores.py  timestamp.py
